reorganizing navigation and changing styles

--- a/contact.html
+++ b/contact.html
@@ -22,37 +22,65 @@
             <p><i class="fa-solid fa-phone"></i><a href="tel:+48 509 039 039">+48 509 039 039</a></p>
             <p><i class="fa fa-envelope"></i> <a href="mailto:zzubezpieczenia@gmail.com">zzubezpieczenia@gmail.com</a></p>
         </div>
-        <div class="header-container">
+        <div class="header-container container">
         <div class="logo-container">
             <div class="logo">
                 <a href="#"><img src="/resources/logo.png" alt="ZZ-Consulting Logo"></a>
             </div>
-            <div class="mobile-menu">
-                 <i class="fa-solid fa-bars"></i>
+       
+            <div id="company-description" class="company-description-container">
+                <h1>ubezpieczenia ZZ-Consulting</h1>
+                <p>Wszystkie ubezpieczenia w jednym miejscu</p>
             </div>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="/">Strona Główna</a></li>
-                    <li><a href="#">O Nas</a></li>
-                    <li><a href="#">Druki</a></li>
-                    <li><a href="#">Narzędzia</a></li>
-                    <li><a href="#" class="nav-active">Kontakt</a></li>
-                </ul>
-            </nav>
+            <div class="mobile-menu">
+                <i class="fa-solid fa-bars"></i>
+           </div>
         </div>
-        <div id="company-description" class="company-description-container">
-            <h1>ubezpieczenia ZZ-Consulting</h1>
-            <p>Wszystkie ubezpieczenia w jednym miejscu</p>
-        </div>
+
     </div>
     </header>
+    <nav>
+        <ul class="nav-links container">
+            <li><a href="/">Strona Główna</a></li>
+            <span class="vr"> </span>
+            <li><a href="#">O Nas</a></li>
+            <span class="vr"> </span>
+            <li><a href="#">Druki</a></li>
+            <span class="vr"> </span>
+            <li><a href="#">Narzędzia</a></li>
+            <span class="vr"> </span>
+            <li><a href="/contact" class="nav-active">Kontakt</a></li>
+        </ul>
+    </nav>
+
+    <section id="contact">
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.9427413266803!2d18.939491376868098!3d50.26750960051867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716cd68d069b65b%3A0x421414c0f57c8038!2sUbezpieczenia%20Chorz%C3%B3w%20Podmiejska%2034%2C%20Agencja%20Op%C5%82at!5e1!3m2!1spl!2spl!4v1698676432248!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+   
+    </section>
+
 
     
 
     <footer class="footer">
-        <span>&copy; 2023</span>
-        <span> ZZ-Consulting. Wszystkie prawa zastrzeżone.</span>
-        <p>Created by <img src="/resources/AODesign.png" alt="AODesign logotype">Olszus</p>
+        <div class="footer-right">
+            <img src="/resources/logo.png" alt="">
+        </div>
+        <div class="footer-center-left">
+            <p>ZZ-Consulting Ubezpieczenia</p>
+            <p>41-506 Chorzów</p>
+            <p>ul.Podmiejska 34/U1</p>
+        </div>
+        <div class="footer-center-left">
+         <p>Godziny otwarcia:</p>
+         <p>Pn: 9:00 - 19:00</p>
+         <p>Wt-Sb: 9:00 - 17:00</p>
+        </div>
+        <div class="footer-left">
+            <span>&copy; 2023</span>
+            <span> ZZ-Consulting. Wszystkie prawa zastrzeżone.</span>
+            <p>Created by <img src="/resources/AODesign.png" alt="AODesign logotype"></p>
+        </div>
     </footer>
 
 
