add meta tags + update contact site

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow" />
+    <meta name="title" content="ZZ-Consulting">
+    <meta name="author" content="Adam Olszewski">
+    <meta name="description" content="Wszystkie ubezpieczenia w jednym miejscu">
+    <meta name="keywords" content="ubezpieczenia, agencja, aviva, allianz, generali, hdi, interrisk, link4, warta, uniqa, pzu, proama, mtu, ergo hestia">
     <title>ZZ-Consulting</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
