--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+    </head>
     <body>
 
         <header>
@@ -43,36 +44,36 @@
         </header>
         <nav>
             <ul class="nav-links container">
-                <li class="nav-active"><a href="/">Strona Główna</a></li>
+                <li ><a href="/" class="nav-active">Strona Główna</a></li>
                 <li><a href="#">O Nas</a></li>
                 <li><a href="#">Druki</a></li>
                 <li><a href="#">Narzędzia</a></li>
                 <li><a href="/contact">Kontakt</a></li>
             </ul>
         </nav>
-
+        <div id="company-description" class="company-description-container">
+            <h1>ubezpieczenia ZZ Consulting</h1>
+            <p>Wszystkie ubezpieczenia w jednym miejscu</p>
+        </div>
     <section id="offer">
-        <div class="offer-right container">
+        <div class="offer-right container fade-bottom">
             <ul>
-                <li><i class="fa-solid fa-car-burst"></i>Oc/Ac</li>
-                <li><i class="fa-solid fa-house-crack"></i>Mieszkanie</li>
-                <li><i class="fa-solid fa-heart-pulse"></i>Na życie</li>
-                <li class="offer-active"><i class="fa-solid fa-user-graduate"></i>Szkolne</li>
-                <li><i class="fa-solid fa-plane-departure"></i>Podróże</li>
+                <li id="oc" class="panel"><i class="fa-solid fa-car-burst"></i>Oc/Ac</li>
+                <li id="home" class="panel"><i class="fa-solid fa-house-crack"></i>Mieszkanie</li>
+                <li id="life" class="panel"><i class="fa-solid fa-heart-pulse"></i>Na życie</li>
+                <li id="school" class="panel offer-active"><i class="fa-solid fa-user-graduate"></i>Szkolne</li>
+                <li id="travel" class="panel"><i class="fa-solid fa-plane-departure"></i>Podróże</li>
             </ul>
             <div class="offer-description">
-                <h2>Ubezpieczenie Szkolne</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum facere in eligendi amet repellat temporibus rem est? Cumque placeat in eum quisquam voluptatibus temporibus molestiae. Nihil commodi exercitationem consequuntur nemo id sed molestiae est perferendis quod eaque laudantium non cupiditate ab obcaecati dolor, ullam aspernatur mollitia ipsa, magni dolorum quo! </p>
+                <h2 class="offer-description-header">Ubezpieczenie Szkolne</h1>
+                <p class="offer-description-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, vitae repudiandae velit autem deserunt eligendi! </p>
 
             </div>
         </div>
     </section>
-    <div id="company-description" class="company-description-container">
-        <h1>ubezpieczenia ZZ-Consulting</h1>
-        <p>Wszystkie ubezpieczenia w jednym miejscu</p>
-    </div>
+
     <section id="partners">
-        <div class="partners-container">
+        <div class="partners-container container reveal fade-bottom">
             <div class="partners-title">
                 <h2>20 towarzystw w jednym miejscu!</h1>
             </div>
@@ -115,6 +116,7 @@
         </div>
     </footer>
 
-
+<script src="/script.js"></script>
 </body>
+
 </html>
