add images, update index, add 404 site/about site, update app.js

--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
         <nav>
             <ul class="nav-links container">
                 <li><a href="/">Strona Główna</a></li>
-                <li><a href="#">O Nas</a></li>
-                <li><a href="#">Druki</a></li>
+                <li><a href="/about">O Nas</a></li>
+                <li><a href="/docs">Druki</a></li>
                 <li><a href="#">Narzędzia</a></li>
-                <li class="nav-active"><a href="/contact">Kontakt</a></li>
+                <li><a href="/contact" class="nav-active">Kontakt</a></li>
             </ul>
         </nav>
 
