--- a/about.html
+++ b/about.html
@@ -47,8 +47,9 @@
         </nav>
 
     <section id="about">
-
+        <div class="center container">
         <img src="/resources/progress.gif" alt="">
+    </div>
     </section>
 
 
