--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
                 <div class="mobile-menu">
                     <ul class="menu">
                         <li><a class="menuItem" href="/">Strona Główna</a></li>
-                        <li><a class="menuItem" href="/about"  class="nav-active">O Nas</a></li>
+                        <li><a class="menuItem" href="/about">O Nas</a></li>
                         <li><a class="menuItem" href="/forms">Druki</a></li>
                         <li><a class="menuItem" href="#">Narzędzia</a></li>
                         <li><a class="menuItem" href="/contact">Kontakt</a></li>
@@ -47,7 +47,7 @@
         <nav>
             <ul class="nav-links container">
                 <li><a href="/">Strona Główna</a></li>
-                <li><a href="/about"  class="nav-active">O Nas</a></li>
+                <li><a href="/about">O Nas</a></li>
                 <li><a href="/forms">Druki</a></li>
                 <li><a href="#">Narzędzia</a></li>
                 <li><a href="/contact">Kontakt</a></li>
@@ -68,19 +68,19 @@
             <img src="/resources/logo.png" alt="">
         </div>
         <div class="footer-center-left">
-            <p>ZZ-Consulting Ubezpieczenia</p>
+            <p>Ubezpieczenia ZZ-Consulting </p>
             <p>41-506 Chorzów</p>
             <p>ul.Podmiejska 34/U1</p>
         </div>
-        <div class="footer-center-left">
+        <div class="footer-center-right">
          <p>Godziny otwarcia:</p>
          <p>Pn: 9:00 - 19:00</p>
-         <p>Wt-Sb: 9:00 - 17:00</p>
+         <p>Wt-Pt: 9:00 - 17:00</p>
         </div>
         <div class="footer-left">
             <span>&copy; 2023</span>
-            <span> ZZ-Consulting. Wszystkie prawa zastrzeżone.</span>
-            <p>Created by <img src="/resources/AODesign.png" alt="AODesign logotype"></p>
+            <span> <a href="#">ZZ-Consulting</a>. <br>Wszystkie prawa zastrzeżone.</span>
+            <p>Created by <a href="#"><img src="/resources/AODesign.png" alt="AODesign logotype"></a></p>
         </div>
     </footer>
 
