--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="mobile-menu">
                     <ul class="menu">
                         <li><a class="menuItem" href="/">Strona Główna</a></li>
-                        <li><a class="menuItem" href="/about"  class="nav-active">O Nas</a></li>
+                        <li><a class="menuItem" href="/about">O Nas</a></li>
                         <li><a class="menuItem" href="/forms">Druki</a></li>
                         <li><a class="menuItem" href="#">Narzędzia</a></li>
                         <li><a class="menuItem" href="/contact">Kontakt</a></li>
@@ -46,10 +46,10 @@
         </header>
         <nav>
             <ul class="nav-links container">
-                <li><a href="/">Strona Główna</a></li>
-                <li><a href="/about"  class="nav-active">O Nas</a></li>
+                <li><a href="/" class="nav-active">Strona Główna</a></li>
+                <li><a href="/about">O Nas</a></li>
                 <li><a href="/forms">Druki</a></li>
-                <li><a href="#">Narzędzia</a></li>
+                <li><a href="/gugu">Narzędzia</a></li>
                 <li><a href="/contact">Kontakt</a></li>
             </ul>
         </nav>
