--- a/forms.html
+++ b/forms.html
@@ -31,7 +31,7 @@
                 <div class="mobile-menu">
                     <ul class="menu">
                         <li><a class="menuItem" href="/">Strona Główna</a></li>
-                        <li><a class="menuItem" href="/about"  class="nav-active">O Nas</a></li>
+                        <li><a class="menuItem" href="/about">O Nas</a></li>
                         <li><a class="menuItem" href="/forms">Druki</a></li>
                         <li><a class="menuItem" href="#">Narzędzia</a></li>
                         <li><a class="menuItem" href="/contact">Kontakt</a></li>
@@ -47,8 +47,8 @@
         <nav>
             <ul class="nav-links container">
                 <li><a href="/">Strona Główna</a></li>
-                <li><a href="/about"  class="nav-active">O Nas</a></li>
-                <li><a href="/forms">Druki</a></li>
+                <li><a href="/about">O Nas</a></li>
+                <li><a href="/forms" class="nav-active">Druki</a></li>
                 <li><a href="#">Narzędzia</a></li>
                 <li><a href="/contact">Kontakt</a></li>
             </ul>
