--- a/404.html
+++ b/404.html
@@ -84,6 +84,7 @@
         </div>
     </footer>
 
-
+    <i onclick="goTop()" id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
+    <script src="/script.js"></script>
 </body>
 </html>
