--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
             <p>Created by <a href="#"><img src="/resources/AODesign.png" alt="AODesign logotype"></a></p>
         </div>
     </footer>
-
+    <i onclick="goTop()" id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
     <script src="/script.js"></script>
 </body>
 </html>
