--- a/forms.html
+++ b/forms.html
@@ -54,10 +54,11 @@
             </ul>
         </nav>
 
-        <section>
+        <section id="forms">
+            <h2>Druki</h2>
             <div class="form-links center container">
                 <div class="form-links-title">
-                    <h2>Druki</h2>
+
                 </div>
                 <div class="form-links-list">
                     <div class="form-list">
@@ -137,7 +138,8 @@
                 <p>Created by <a href="#"><img src="/resources/AODesign.png" alt="AODesign logotype"></a></p>
             </div>
         </footer>
-    
+        <i onclick="goTop()" id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
+
     <script src="/script.js"></script>
     </body>
     
