--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZZ-Consulting</title>
+    <meta name="description" content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia. Poznaj korzyści i usługi, które oferuje agencja ubezpieczeniowa i zabezpiecz swoje życie i majątek.">
+    <title>ZZ-Consulting Ubezpieczenia</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="apple-touch-icon" sizes="180x180" href="/resources/Icons/apple-touch-icon.png">
@@ -15,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+</head>
     <body>
 
         <header>
@@ -71,7 +73,7 @@
                     </div>
                     <div class="right-row">
                         <div>
-                            <img src="/resources/car-umbrella.gif" alt="">
+                            <img src="/resources/car-umbrella.gif" alt="OC/AC">
                         </div>
                     </div>
                 </div>
@@ -86,7 +88,7 @@
                     </div>
                     <div class="right-row">
                         <div>
-                            <img src="/resources/life-insurance.gif" alt="">
+                            <img src="/resources/life-insurance.gif" alt="Życie">
                         </div>
                     </div>
                 </div>
@@ -101,7 +103,7 @@
                     </div>
                     <div class="right-row">
                         <div>
-                            <img src="/resources/school-insurance.jpg" alt="">
+                            <img src="/resources/school-insurance.jpg" alt="Szkolne">
                         </div>
                     </div>
                 </div>
@@ -116,7 +118,7 @@
                     </div>
                     <div class="right-row">
                         <div>
-                            <img src="/resources/travel-insurance.gif" alt="">
+                            <img src="/resources/travel-insurance.gif" alt="Podróżne">
                         </div>
                     </div>
                 </div>
@@ -131,18 +133,18 @@
                 <h2>20 towarzystw w jednym miejscu!</h1>
             </div>
             <div class="partners-list">
-                <img src="/resources/partners/ALLIANZ_logo.png">
-                <img src="/resources/partners/GENERALI_logo.svg">
-                <img src="/resources/partners/HDI_logo.png">
-                <img src="/resources/partners/INTERRISK_logo.svg">
-                <img src="/resources/partners/LINK4_logo.jpg">
-                <img src="/resources/partners/MTU_logo.jpg">
-                <img src="/resources/partners/PROAMA_logo.png">
-                <img src="/resources/partners/PZU_logo.png">
-                <img src="/resources/partners/UNIQA_logo.png">
-                <img src="/resources/partners/WARTA_logo.png">
-                <img src="/resources/partners/WIENER_logo.png">
-                <img src="/resources/partners/ERGO_logo.png">
+                <img src="/resources/partners/ALLIANZ_logo.png" alt="Allianz">
+                <img src="/resources/partners/GENERALI_logo.svg" alt="Generali">
+                <img src="/resources/partners/HDI_logo.png" alt="HDI">
+                <img src="/resources/partners/INTERRISK_logo.svg" alt="interrisk">
+                <img src="/resources/partners/LINK4_logo.jpg" alt="link4">
+                <img src="/resources/partners/MTU_logo.jpg" alt="mtu">
+                <img src="/resources/partners/PROAMA_logo.png" alt="proama">
+                <img src="/resources/partners/PZU_logo.png" alt="pzu">
+                <img src="/resources/partners/UNIQA_logo.png" alt="uniqa">
+                <img src="/resources/partners/WARTA_logo.png" alt="warta">
+                <img src="/resources/partners/WIENER_logo.png" alt="wiener">
+                <img src="/resources/partners/ERGO_logo.png" alt="ergo">
 
             </div>
         </div>
@@ -150,7 +152,7 @@
 
     <footer class="footer">
         <div class="footer-right">
-            <img src="/resources/logo.png" alt="">
+            <img src="/resources/logo.png" alt="logo">
         </div>
         <div class="footer-center-left">
             <p>Ubezpieczenia ZZ-Consulting </p>
