--- a/about.html
+++ b/about.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia. Poznaj korzyści i usługi, które oferuje agencja ubezpieczeniowa i zabezpiecz swoje życie i majątek.">
-    <title>ZZ-Consulting Ubezpieczenia</title>
+    <meta name="description" content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia.">    <title>ZZ-Consulting O nas</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="apple-touch-icon" sizes="180x180" href="/resources/Icons/apple-touch-icon.png">
@@ -58,7 +57,7 @@
 
     <section id="about">
 
-        <h2>O nas</h2>
+        <h1>O nas</h1>
 
         <div class="about-us container">
             <div class="left-site what-we-do">
