--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia. Poznaj korzyści i usługi, które oferuje agencja ubezpieczeniowa i zabezpiecz swoje życie i majątek.">
-    <title>ZZ-Consulting Ubezpieczenia</title>
+    <meta name="description" content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia.">    <title>ZZ-Consulting Kontakt</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="apple-touch-icon" sizes="180x180" href="/resources/Icons/apple-touch-icon.png">
@@ -57,7 +56,7 @@
         </nav>
 
     <section id="contact">
-        <h2>Kontakt</h2>
+        <h1>Kontakt</h1>
         <div class="contact-container container center">
             <div class="maps-container">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.9427413266803!2d18.939491376868098!3d50.26750960051867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716cd68d069b65b%3A0x421414c0f57c8038!2sUbezpieczenia%20Chorz%C3%B3w%20Podmiejska%2034%2C%20Agencja%20Op%C5%82at!5e1!3m2!1spl!2spl!4v1698676432248!5m2!1spl!2spl" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
