format resources to webp format, improve BackToTop button

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             <div class="header-container container">
             <div class="logo-container">
                 <div class="logo">
-                    <a href="#"><img src="/resources/logo.png" alt="ZZ-Consulting Logo"></a>
+                    <a href="#"><img src="/resources/logo.webp" alt="ZZ-Consulting Logo"></a>
                 </div>
            
                 <div class="mobile-menu">
@@ -67,12 +67,12 @@
     
             </div>
             <div class="right-site right-img what-we-do">
-                <img src="/resources/aboutus.jpg" alt="o nas">    
+                <img src="/resources/aboutus.webp" alt="o nas">    
             </div>
         </div>
         <div class="about-us container reveal fade-bottom">
             <div class="right-site left-img">
-                <img src="/resources/employee.jpg" alt="employee">    
+                <img src="/resources/employee.webp" alt="employee">    
             </div>
             <div class="left-site right-descr">
                 <h3>Poznaj nasz zespół</h3>
@@ -83,12 +83,12 @@
         </div>
         <div class="about-container container reveal fade-bottom">
             <div class="left-site offer-box">
-                <img src="/resources/anonymous.jpg" alt="picture">
+                <img src="/resources/anonymous.webp" alt="picture">
                 <h3>Imię i nazwisko</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p>
             </div>
             <div class="right-site right-img offer-box">
-                <img src="/resources/anonymous.jpg" alt="picture">
+                <img src="/resources/anonymous.webp" alt="picture">
                 <h3>Imię i nazwisko</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p>
             </div>
@@ -100,7 +100,7 @@
 
     <footer class="footer">
         <div class="footer-right">
-            <img src="/resources/logo.png" alt="logo">
+            <img src="/resources/logo.webp" alt="logo">
         </div>
         <div class="footer-center-left">
             <p>Ubezpieczenia ZZ-Consulting </p>
@@ -115,10 +115,10 @@
         <div class="footer-left">
             <span>&copy; 2023</span>
             <span> <a href="#">ZZ-Consulting</a>. <br>Wszystkie prawa zastrzeżone.</span>
-            <p>Created by <a href="#"><img src="/resources/AODesign.png" alt="AODesign logotype"></a></p>
+            <p>Created by <a href="#"><img src="/resources/AODesign.webp" alt="AODesign logotype"></a></p>
         </div>
     </footer>
-    <i onclick="goTop()" id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
+    <i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
     <script src="/script.js"></script>
 </body>
 </html>
