--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
             <div class="header-container container">
             <div class="logo-container">
                 <div class="logo">
-                    <a href="#"><img src="/resources/logo.png" alt="ZZ-Consulting Logo"></a>
+                    <a href="#"><img src="/resources/logo.webp" alt="ZZ-Consulting Logo"></a>
                 </div>
            
                 <div class="mobile-menu">
@@ -102,7 +102,7 @@
 
     <footer class="footer">
         <div class="footer-right">
-            <img src="/resources/logo.png" alt="logo">
+            <img src="/resources/logo.webp" alt="logo">
         </div>
         <div class="footer-center-left">
             <p>Ubezpieczenia ZZ-Consulting </p>
@@ -117,10 +117,10 @@
         <div class="footer-left">
             <span>&copy; 2023</span>
             <span> <a href="#">ZZ-Consulting</a>. <br>Wszystkie prawa zastrzeżone.</span>
-            <p>Created by <a href="#"><img src="/resources/AODesign.png" alt="AODesign logotype"></a></p>
+            <p>Created by <a href="#"><img src="/resources/AODesign.webp" alt="AODesign logotype"></a></p>
         </div>
     </footer>
-    <i onclick="goTop()" id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
+    <i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
 
     <script src="/script.js"></script>
 </body>
