--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="header-container container">
             <div class="logo-container">
                 <div class="logo">
-                    <a href="#"><img src="/resources/logo.png" alt="ZZ-Consulting Logo"></a>
+                    <a href="#"><img src="/resources/logo.webp" alt="ZZ-Consulting Logo"></a>
                 </div>
            
                 <div class="mobile-menu">
@@ -73,7 +73,7 @@
                     </div>
                     <div class="right-row">
                         <div>
-                            <img src="/resources/car-umbrella.gif" alt="OC/AC">
+                            <img src="/resources/car-umbrella.webm" alt="OC/AC">
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                     </div>
                     <div class="right-row">
                         <div>
-                            <img src="/resources/life-insurance.gif" alt="Życie">
+                            <img src="/resources/life-insurance.webp" alt="Życie">
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="right-row">
                         <div>
-                            <img src="/resources/school-insurance.jpg" alt="Szkolne">
+                            <img src="/resources/school-insurance.webp" alt="Szkolne">
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     </div>
                     <div class="right-row">
                         <div>
-                            <img src="/resources/travel-insurance.gif" alt="Podróżne">
+                            <img src="/resources/travel-insurance.webp" alt="Podróżne">
                         </div>
                     </div>
                 </div>
@@ -133,18 +133,18 @@
                 <h2>20 towarzystw w jednym miejscu!</h2>
             </div>
             <div class="partners-list">
-                <img src="/resources/partners/ALLIANZ_logo.png" alt="Allianz">
-                <img src="/resources/partners/GENERALI_logo.svg" alt="Generali">
-                <img src="/resources/partners/HDI_logo.png" alt="HDI">
-                <img src="/resources/partners/INTERRISK_logo.svg" alt="interrisk">
-                <img src="/resources/partners/LINK4_logo.jpg" alt="link4">
-                <img src="/resources/partners/MTU_logo.jpg" alt="mtu">
-                <img src="/resources/partners/PROAMA_logo.png" alt="proama">
-                <img src="/resources/partners/PZU_logo.png" alt="pzu">
-                <img src="/resources/partners/UNIQA_logo.png" alt="uniqa">
-                <img src="/resources/partners/WARTA_logo.png" alt="warta">
-                <img src="/resources/partners/WIENER_logo.png" alt="wiener">
-                <img src="/resources/partners/ERGO_logo.png" alt="ergo">
+                <a href="/allianz"><img src="/resources/partners/ALLIANZ_logo.webp" alt="Allianz"></a>
+                <a href="/generali"><img src="/resources/partners/GENERALI_logo.webp" alt="Generali"></a>
+                <a href="/hdi"><img src="/resources/partners/HDI_logo.webp" alt="HDI"></a>
+                <a href="/interrisk"><img src="/resources/partners/INTERRISK_logo.webp" alt="interrisk"></a>
+                <a href="/link4"><img src="/resources/partners/LINK4_logo.webp" alt="link4"></a>
+                <a href="/mtu"><img src="/resources/partners/MTU_logo.webp" alt="mtu"></a>
+                <a href="/proama"><img src="/resources/partners/PROAMA_logo.webp" alt="proama"></a>
+                <a href="/pzu"><img src="/resources/partners/PZU_logo.webp" alt="pzu"></a>
+                <a href="/uniqa"><img src="/resources/partners/UNIQA_logo.webp" alt="uniqa"></a>
+                <a href="/warta"><img src="/resources/partners/WARTA_logo.webp" alt="warta"></a>
+                <a href="/wiener"><img src="/resources/partners/WIENER_logo.webp" alt="wiener"></a>
+                <a href="/ergo"><img src="/resources/partners/ERGO_logo.webp" alt="ergo"></a>
 
             </div>
         </div>
@@ -152,7 +152,7 @@
 
     <footer class="footer">
         <div class="footer-right">
-            <img src="/resources/logo.png" alt="logo">
+            <img src="/resources/logo.webp" alt="logo">
         </div>
         <div class="footer-center-left">
             <p>Ubezpieczenia ZZ-Consulting </p>
@@ -167,10 +167,10 @@
         <div class="footer-left">
             <span>&copy; 2023</span>
             <span> <a href="#">ZZ-Consulting</a>. <br>Wszystkie prawa zastrzeżone.</span>
-            <p>Created by <a href="#"><img src="/resources/AODesign.png" alt="AODesign logotype"></a></p>
+            <p>Created by <a href="#"><img src="/resources/AODesign.webp" alt="AODesign logotype"></a></p>
         </div>
     </footer>
-    <i onclick="goTop()" id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
+    <i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
 
 <script src="/script.js"></script>
 </body>
