--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia.">
     <title>ZZ-Consulting Strona Główna</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.0.9/dist/css/splide.min.css">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="apple-touch-icon" sizes="180x180" href="/resources/Icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="192x192"  href="/resources/Icons/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512"  href="/resources/Icons/android-chrome-512x512.png">
@@ -63,68 +63,82 @@
         <h3 class="offer-header">Oferta</h3>
         <div class="offer-container">
 
-            <div class="offer-box">
-                <div class="row">
-                    <div class="left-row">
-                        <div><i class="fa-solid fa-car-burst fa-2xl"></i></div>
-                        <div><h4>Ubezpieczenie OC/AC</h4></div>
-                        <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p></div>
-                        <div><a href="#"><button class="button">Sprawdź więcej</button></a></div>
-                    </div>
-                    <div class="right-row">
-                        <div>
-                            <img src="/resources/car-umbrella.webm" alt="OC/AC">
+            <div class="splide">
+                <div class="splide__track">
+                    <ul class="splide__list">
+                        <li class="splide__slide">
+                            <div class="offer-box">
+                                <div class="row">
+                                    <div class="left-row">
+                                        <div><i class="fa-solid fa-car-burst fa-2xl"></i></div>
+                                        <div><h4>Ubezpieczenie OC/AC</h4></div>
+                                        <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p></div>
+                                        <div><a href="#"><button class="button">Sprawdź więcej</button></a></div>
+                                    </div>
+                                    <div class="right-row">
+                                        <div>
+                                            <img src="/resources/car-umbrella.webm" alt="OC/AC">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="offer-box">
+                                <div class="row">
+                                    <div class="left-row">
+                                        <div><i class="fa-solid fa-heart fa-2xl"></i></div>
+                                        <div><h4>Ubezpieczenie na życie</h4></div>
+                                        <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p></div>
+                                        <div><button class="button">Sprawdź więcej</button></div>
+                                    </div>
+                                    <div class="right-row">
+                                        <div>
+                                            <img src="/resources/life-insurance.webp" alt="Życie">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="offer-box">                
+                                <div class="row">
+                                <div class="left-row">
+                                    <div><i class="fa-solid fa-graduation-cap fa-2xl"></i></i></div>
+                                    <div><h4>Ubezpieczenie szkolne</h4></div>
+                                    <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p></div>
+                                    <div><button class="button">Sprawdź więcej</button></div>
+                                </div>
+                                <div class="right-row">
+                                    <div>
+                                        <img src="/resources/school-insurance.webp" alt="Szkolne">
+                                    </div>
+                                </div>
+                            </div></div>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="offer-box"> 
+                                <div class="row">
+                                <div class="left-row">
+                                    <div><i class="fa-solid fa-plane fa-2xl"></i></i></div>
+                                    <div><h4>Ubezpieczenie podróżne</h4></div>
+                                    <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p></div>
+                                    <div><button class="button">Sprawdź więcej</button></div>
+                                </div>
+                                <div class="right-row">
+                                    <div>
+                                        <img src="/resources/travel-insurance.webp" alt="Podróżne">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>            
-            <div class="offer-box">
-                <div class="row">
-                    <div class="left-row">
-                        <div><i class="fa-solid fa-heart fa-2xl"></i></div>
-                        <div><h4>Ubezpieczenie na życie</h4></div>
-                        <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p></div>
-                        <div><button class="button">Sprawdź więcej</button></div>
-                    </div>
-                    <div class="right-row">
-                        <div>
-                            <img src="/resources/life-insurance.webp" alt="Życie">
-                        </div>
-                    </div>
-                </div>
-            </div>            
-            <div class="offer-box">
-                <div class="row">
-                    <div class="left-row">
-                        <div><i class="fa-solid fa-graduation-cap fa-2xl"></i></i></div>
-                        <div><h4>Ubezpieczenie szkolne</h4></div>
-                        <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p></div>
-                        <div><button class="button">Sprawdź więcej</button></div>
-                    </div>
-                    <div class="right-row">
-                        <div>
-                            <img src="/resources/school-insurance.webp" alt="Szkolne">
-                        </div>
-                    </div>
-                </div>
-            </div>            
-            <div class="offer-box">
-                <div class="row">
-                    <div class="left-row">
-                        <div><i class="fa-solid fa-plane fa-2xl"></i></i></div>
-                        <div><h4>Ubezpieczenie podróżne</h4></div>
-                        <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p></div>
-                        <div><button class="button">Sprawdź więcej</button></div>
-                    </div>
-                    <div class="right-row">
-                        <div>
-                            <img src="/resources/travel-insurance.webp" alt="Podróżne">
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
         </div>
+
     </section>
 
     <section id="partners">
@@ -172,7 +186,10 @@
     </footer>
     <i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
 
-<script src="/script.js"></script>
+
+<script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.0.9/dist/js/splide.min.js"></script>
+<script type="module" src="/splide.js"></script>
 </body>
 
 </html>
