--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@
                 <h2>20 towarzystw w jednym miejscu!</h2>
             </div>
             <div class="partners-list">
-                <a href="/allianz"><img src="/resources/partners/ALLIANZ_logo.webp" alt="Allianz"></a>
-                <a href="/generali"><img src="/resources/partners/GENERALI_logo.webp" alt="Generali"></a>
-                <a href="/hdi"><img src="/resources/partners/HDI_logo.webp" alt="HDI"></a>
-                <a href="/interrisk"><img src="/resources/partners/INTERRISK_logo.webp" alt="interrisk"></a>
-                <a href="/link4"><img src="/resources/partners/LINK4_logo.webp" alt="link4"></a>
-                <a href="/mtu"><img src="/resources/partners/MTU_logo.webp" alt="mtu"></a>
-                <a href="/proama"><img src="/resources/partners/PROAMA_logo.webp" alt="proama"></a>
-                <a href="/pzu"><img src="/resources/partners/PZU_logo.webp" alt="pzu"></a>
-                <a href="/uniqa"><img src="/resources/partners/UNIQA_logo.webp" alt="uniqa"></a>
-                <a href="/warta"><img src="/resources/partners/WARTA_logo.webp" alt="warta"></a>
-                <a href="/wiener"><img src="/resources/partners/WIENER_logo.webp" alt="wiener"></a>
-                <a href="/ergo"><img src="/resources/partners/ERGO_logo.webp" alt="ergo"></a>
+                <a href="/partnerzy/allianz/"><img src="/resources/partners/ALLIANZ_logo.webp" alt="Allianz"></a>
+                <a href="/partnerzy/generali/"><img src="/resources/partners/GENERALI_logo.webp" alt="Generali"></a>
+                <a href="/partnerzy/hdi/"><img src="/resources/partners/HDI_logo.webp" alt="HDI"></a>
+                <a href="/partnerzy/interrisk/"><img src="/resources/partners/INTERRISK_logo.webp" alt="interrisk"></a>
+                <a href="/partnerzy/link4/"><img src="/resources/partners/LINK4_logo.webp" alt="link4"></a>
+                <a href="/partnerzy/mtu/"><img src="/resources/partners/MTU_logo.webp" alt="mtu"></a>
+                <a href="/partnerzy/proama/"><img src="/resources/partners/PROAMA_logo.webp" alt="proama"></a>
+                <a href="/partnerzy/pzu/"><img src="/resources/partners/PZU_logo.webp" alt="pzu"></a>
+                <a href="/partnerzy/uniqa/"><img src="/resources/partners/UNIQA_logo.webp" alt="uniqa"></a>
+                <a href="/partnerzy/warta/"><img src="/resources/partners/WARTA_logo.webp" alt="warta"></a>
+                <a href="/partnerzy/wiener/"><img src="/resources/partners/WIENER_logo.webp" alt="wiener"></a>
+                <a href="/partnerzy/ergo/"><img src="/resources/partners/ERGO_logo.webp" alt="ergo"></a>
 
             </div>
         </div>
